fixed spacing need to fix card position

--- a/style.css
+++ b/style.css
@@ -1,18 +1,18 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");
 
 body {
   font-family: lato;
 }
 h1.gradient-text {
-  font-family: 'Lato', sans-serif;
-  font-weight: 400;
-  font-size: 72px;
-  background: -webkit-linear-gradient(#e00b0b, #333);
+  font-family: "Lato", sans-serif;
+  font-weight: 700;
+  font-size: 100px;
+  background: -webkit-linear-gradient(#F77F00,#FCBF49,#d24b8e);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 body {
-  background-color: #f9f9fa;
+  background-color: #fffbf9;
 }
 
 .padding {
